<resources>
    <string name="app_name">Alchemi</string>
    <string name="invited_add_referral_code">Invited? Add Referral Code</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="continue_txt">Continue</string>
    <string name="your_metal_card_best_cashback_ever">Your Metal Card \nBest Cashback Ever.</string>
    <string name="upto_cashback_on_your_spending">Up to 8% cashback on spending on your \nAlchemi.com Visa card.</string>
    <string name="invite_and_share_with_friends_get_rewards"><![CDATA[Invite & Share with \nFriends & Earn Rewards]]></string>
    <string name="invite_and_share_with_friends_and_get_25aco_rewards"><![CDATA[Invite & share with friends & earn \nreward $25 or $25 worth in ACO]]></string>
    <string name="get_more_interest_on_alchemi_earn">Get More interest on \nAlchemi Earn</string>
    <string name="with_alchemi_earn_upto_12_pa_on_alchemi_assets">With Alchemi earn upto 12% P.A on \nyour Alchemi assets</string>
    <string name="your_alchemi_wallet_made_simple">Your Alchemi Wallet \nMade Simple</string>
    <string name="the_best_place_to_buy_sell_pay_with_alchemi">The best place to buy, sell and pay with \nAlchemi forget the banks. Let\'s go!</string>
    <string name="enter_referal_code">Enter Refer Code:</string>
    <string name="if_you_have_refer_code_desc_txt">If you have a refer code, \nEnter it and get worth of \n$25 in ACO</string>
    <string name="enter_refer_code">Enter Refer Code</string>
    <string name="enter_your_vali_refer_code_and_get_benefits">Enter your valid refer code and get the benefits of $25 worth in ACO</string>
    <string name="verify_code">Verify Code</string>
    <string name="signup">SignUp</string>
    <string name="open_email">Open Email</string>
    <string name="resend">Resend</string>
    <string name="check_your_email_for_confirmation_to_continue">Check your email for a confirmation link to continue</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="i_accept_the_terms_and_conditions">I accept the </string>
    <string name="verified">Verified !</string>
    <string name="your_email_address_is_confirmed">Your email address \nis confirmed</string>
    <string name="tap_anywhere_to_continue">Tap anywhere to continue</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="refer_code">Refer Code</string>
    <string name="privacy_notice">Privacy Notice</string>
    <string name="we_use_your_phone_number_to_verify_important_changes">We use your phone number to verify important changes to your account</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="enter_otp">Enter OTP.</string>
    <string name="verification_code">Verification Code (SMS)</string>
    <string name="resend_code">Resend Code</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="signIn">SignIn</string>
    <string name="enter_you_email">Please enter your email.</string>
    <string name="enter_valid_email">Please enter your valid email.</string>
    <string name="accept_terms_conditions"><![CDATA[Please accept Terms & Conditions and Privacy Notice.]]></string>
    <string name="enter_your_phone_number">Please enter your phone number.</string>
    <string name="enter_your_valid_phone_number">Please enter your valid phone number.</string>
    <string name="enter_your_otp">Please enter your OTP.</string>
    <string name="enter_your_valid_otp">Please enter your valid OTP.</string>
    <string name="verify_your_identtity">Verify Your Identity</string>
    <string name="enter_your_referal_code">Please enter referral code.</string>
    <string name="account_opening">Account Opening:</string>
    <string name="account_opening_description">Government Regulations require us to know more about you.</string>
    <string name="info_required">Information Required</string>
    <string name="full_legal_name">Full Legal Name</string>
    <string name="id_doument">ID Document</string>
    <string name="selfie">Selfie</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_first_name">Please enter your first name.</string>
    <string name="enter_your_last_name">Please enter your last name.</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="enter_your_legal_name_as_shown_on_your_id">Enter your legal name as shown on your ID</string>
    <string name="you_re_not_connected_to_the_internet_n_please_connect_and_retry">You\'re not connected to the Internet.Please Connect and Retry.</string>
    <string name="refresh">Refresh</string>
    <string name="Oops">Oops!!</string>
    <string name="enter_valid_referral_code">Please enter valid referral code.</string>
    <string name="slide_and_complete_captcha"><![CDATA[Slide & complete the captcha. Kindly confirm that you are not robot]]></string>
    <string name="document_and_selfie_submitted"><![CDATA[Document & Selfie Submitted!]]></string>
    <string name="we_will_notify_you_once_verification_completed">We will notify you once your verification is completed, it will take 2–3 business days</string>
    <string name="document_and_selfie_verified"><![CDATA[Document & Selfie Verified!]]></string>
    <string name="submitted_document_successfully_verified"><![CDATA[Your submitted documents & Selfie is successfully verified]]></string>
    <string name="and">"and"</string>
    <string name="thanks_for_joining_us">Thanks for Joining Us!</string>
    <string name="thanks_body_text"><![CDATA[We\'d love to send you exclusive offer & new updates, via email or in-app messages. We\'ll never sell your information to third parties. You can opt out/withdraw your concent at any time.]]></string>
    <string name="thanks_bottom_text">"Here is our "</string>
    <string name="further_information"> for further information about how we use and protect personal data.</string>
    <string name="yes_I_like_to_receive_offers"><![CDATA[Yes, I\'d like to receive exclusive offers & updates from Alchemi.com]]></string>
    <string name="lbl_set_profile_photo">Take Selfie</string>
    <string name="lbl_set_document_photo">Upload Documents</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="server_error">Server Error. Please try again.</string>
    <string name="error_message">The email is already exists.</string>
    <string name="enter_your_ssn_address_number">Enter Your SSN/Address Number</string>
    <string name="ssn_hint">677-10-7633</string>
    <string name="enter_your_legal_ssn_as_shown_on_id">Enter your legal SSN/Address number as shown on your ID</string>
    <string name="ssn_address">SSN/Address</string>
    <string name="set_pin">Set Pin</string>
    <string name="generate_pin">Generate Pin:</string>
    <string name="enter_your_ssn_address_number_validation">Please enter your SSN/ Address Number.</string>
    <string name="enter_valid_ssn">Please enter valid SSN/ Address Number.</string>
    <string name="enter_the_unique_pin_to_soihgn_in">Enter the unique pin number to signin and access the app</string>
    <string name="enter_your_pin">Enter Your Pin</string>
    <string name="confirm_your_pin">Confirm Your Pin</string>
    <string name="enter_your_unique_pin">Enter your unique pin to enter in app</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="enter_your_create_pin">Please enter your pin.</string>
    <string name="enter_your_confirm_pin">Please enter your confirm pin.</string>
    <string name="create_pin_and_confirm_pin_is_mismatched">Your create pin and confirm pin is mismatched.</string>
    <string name="please_select_checkbox_to_receive_offers">Please select checkbox to receive offers and updates from Alchemi.com</string>
    <string name="acx_pay">ACX Pay</string>
    <string name="home">Home</string>
    <string name="accounts">Accounts</string>
    <string name="track">Track</string>
    <string name="card">Card</string>
    <string name="acx">ACX</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="name_phone_email"><![CDATA[Name, Phone & Email]]></string>
    <string name="card_application">Card Application</string>
    <string name="verify_address_and_ssn"><![CDATA[Verify Address & SSN]]></string>
    <string name="matched">Matched</string>
    <string name="us_bank_transfer_application">US Bank Transfer Application</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="security">Security</string>
    <string name="passcode_settings">Passcode Settings</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="two_factor_authentication">2 Factor Authentication</string>
    <string name="anti_phishing_code">Anti-Phishing Code</string>
    <string name="notifications">Notifications</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="support">Support</string>
    <string name="contact_support">Contact Support</string>
    <string name="about_alchemi_visa_card">About Alchemi.com Visa Card</string>
    <string name="about_alchemi">About Alchemi.com</string>
    <string name="fees_and_limits"><![CDATA[Fees & Limits]]></string>
    <string name="system_status">System Status</string>
    <string name="visit_our_website">Visit Our Website</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_image_from_gallery">Select Image from Gallery</string>
    <string name="take_image_from_camera">Take Picture from Camera</string>
    <string name="enable_disable_passcode">Enable/Disable Passcode</string>
    <string name="passcode_options">Passcode Options</string>
    <string name="old_passcode">Old Passcode</string>
    <string name="enter_new_passcode">Enter New Passcode</string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="update_passcode">Update Passcode</string>
    <string name="enter_your_old_passcode">Please enter your old passcode.</string>
    <string name="incorrect_old_passcode">Incorrect old passcode.</string>
    <string name="enter_your_new_passcode">Please enter your new passcode.</string>
    <string name="enter_your_confirm_passcode">Please enter your confirm passcode.</string>
    <string name="new_passcode_and_confirm_passcode_is_mismatched">Your new passcode and confirm passcode is mismatched.</string>
    <string name="enter_aniti_phishing_code">Enter Anti-Phishing Code</string>
    <string name="save">Save</string>
    <string name="enable_disable_notifications">Enable/Disable Notifications</string>
    <string name="status">Status</string>
    <string name="external_wallet">External Wallet</string>
    <string name="alchemi_exchange">Alchemi.com Exchange</string>
    <string name="alchemi_users">Alchemi.com Users</string>
    <string name="withdraw_alchemi">Withdraw Alchemi</string>
</resources>