<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    android:background="@drawable/app_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/outer_padding"
    android:layout_marginStart="@dimen/_10dp"
    android:layout_marginLeft="@dimen/_10dp"
    android:layout_marginEnd="@dimen/_10dp"
    android:layout_marginRight="@dimen/_10dp">
        <ImageView
            android:id="@+id/imageAppLogo"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/app_logo"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:paddingEnd="@dimen/_10dp"
            android:paddingStart="@dimen/_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingBottom="@dimen/_20dp">
            <TextView
                android:id="@+id/tvReferralCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextView_style"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/invited_add_referral_code"
               />
            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                style="@style/ButtonText_style_yellow"
                android:text="@string/sign_up"/>
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                style="@style/ButtonText_style"
                android:text="@string/login"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>