<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@drawable/app_bg"
    android:scrollbars="none"
    android:paddingBottom="@dimen/_20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:id="@+id/cl_parent"
        android:layout_marginRight="@dimen/_10dp"
        android:padding="@dimen/outer_padding">
        <LinearLayout
            android:id="@+id/ll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/llBottoms"
            android:background="@drawable/card_bg"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="@dimen/outer_padding">
            <ImageView
                android:id="@+id/emailConfirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:src="@drawable/join"
                android:layout_gravity="center"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name" />
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                style="@style/TextView_style_large"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/thanks_for_joining_us"
                android:textColor="@color/colorGreen"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                style="@style/TextView_style"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:padding="5dp"
                android:text="@string/thanks_body_text"/>
            <TextView
                android:id="@+id/tvThanksBottomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                style="@style/TextView_style"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:padding="5dp"
                android:text="@string/thanks_bottom_text"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/llBottoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    <LinearLayout
        android:id="@+id/ll_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_10dp">
    <CheckBox
        android:id="@+id/checkboxTermsConditions"
        style="@style/TextView_style"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="" />
    <TextView
        android:id="@+id/tvCheckboxTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        style="@style/TextView_style"
        android:layout_marginTop="0dp"
        android:focusableInTouchMode="false"
        android:textColorHighlight="@color/black"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        android:text="@string/yes_I_like_to_receive_offers"/>
     </LinearLayout>

        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            style="@style/ButtonText_style"
            android:textColorLink="@color/colorYellow"
            android:textIsSelectable="false"
            android:selectAllOnFocus="false"
            android:shadowColor="@android:color/transparent"
            android:text="@string/continue_txt"/>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>