<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="2dp"
    android:orientation="vertical"
    android:elevation="@dimen/_10dp"
    android:layout_gravity="bottom"
    android:focusable="true"
    android:clickable="true"
    android:background="@drawable/card_round_shape"
    app:layout_behavior="@string/bottom_sheet_behavior">
    <RelativeLayout
        android:id="@+id/rlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:padding="15dp"
            style="@style/ButtonText_style_Bg"
            android:background="@color/transparent"
            android:layout_centerVertical="true"
            android:text="@string/withdraw_alchemi"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:layout_centerInParent="true"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/ivCrossIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/close_icon"
            android:adjustViewBounds="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:scaleType="fitXY"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_20dp"
        android:paddingBottom="@dimen/_20dp"
        android:background="@color/colorBottomSheetBg">

        <TextView
            android:id="@+id/tvAlchemiUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="25dp"
            android:paddingEnd="@dimen/_20dp"
            style="@style/TextView_style_large"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/alchemi_users"
            android:textColor="@color/black" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tvAlchemiExchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="25dp"
            android:paddingEnd="@dimen/_20dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            style="@style/TextView_style_large"
            android:text="@string/alchemi_exchange"
            android:textColor="@color/black" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tvExternalWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="25dp"
            android:paddingEnd="@dimen/_20dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            style="@style/TextView_style_large"
            android:text="@string/external_wallet"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>
